# yocto-gl

./: CMakeLists.txt
tests/: CMakeLists.txt  ygltf_reader.cc
yocto/: YGLTF.h  YGLTF_API_EXPORT.h  YMATH.h  YSHAPE.h  YSHAPE_API_EXPORT.h  yocto_gltf.cpp  yocto_gltf.h  yocto_math.h  yocto_shape.cpp  yocto_shape.h
yocto/ext/: json.hpp
